Codigo ATUALIZADO com a estrutura de salvamento via postman adicionando os campos+arquivo de imagem, e puxando via template html lista de pets, os pets+imagens relativas